<resources>
    <string name="app_name">GeoPuzzle</string>

    <string name="title_activity_change_password">Change password</string>
    <string name="title_activity_login">Login to GeoPuzzle</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_register">Register to GeoPuzzle</string>
    <string name="title_activity_registration_success">Registration successful</string>
    <string name="title_activity_reset_password">Reset password</string>
    <string name="title_activity_search_friends">Search people</string>
    <string name="title_activity_friends">My Friends</string>
    <string name="title_activity_puzzles">My Puzzles</string>
    <string name="title_activity_friend">Friend</string>
    <string name="title_activity_create_puzzle">Create puzzle</string>

    <!-- Toast messages constatns -->
    <string name="msg_first_name_empty">First name field empty</string>
    <string name="msg_last_name_empty">Last name field empty</string>
    <string name="msg_email_empty">Email field empty</string>
    <string name="msg_username_empty">Username field empty</string>
    <string name="msg_username_length">Username must contain 6 or more characters</string>
    <string name="msg_password_empty">Password field empty</string>
    <string name="msg_password_confirm_empty">Password confirm field empty</string>
    <string name="msg_password_length">Password must contain 6 or more characters</string>
    <string name="msg_password_not_match">Passwords doesn\'t match</string>
    <string name="msg_phone_number_empty">Phone number field empty</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_checking_network">Checking Network</string>
    <string name="msg_network_error">Error in Network Connection</string>
    <string name="msg_contacting_servers">Contacting Servers</string>
    <string name="msg_getting_data">Getting Data...</string>
    <string name="msg_password_change_success">Your Password is successfully changed</string>
    <string name="msg_invalid_old_password">Invalid old Password</string>
    <string name="msg_password_change_error">Error occured in changing Password</string>
    <string name="msg_password_reset_error">Error occured in reseting Password</string>
    <string name="msg_email_password_empty">Email and Password fields are empty</string>
    <string name="msg_incorrect_username_password">Incorrect Username or Password</string>
    <string name="msg_recovery_mail">A recovery email is sent to you, see it for more details</string>
    <string name="msg_email_dont_exist">Your email does not exist in our database</string>
    <string name="msg_registration_success">Successfully Registered</string>
    <string name="msg_user_exist">User already exists</string>
    <string name="msg_invalid_email">Invalid Email address</string>
    <string name="msg_registration_error">Error occured in registration</string>
    <string name="msg_friends_list_empty">No friends to load</string>
    <string name="msg_puzzle_chunks_list_empty">No puzzles to load</string>
    <string name="msg_puzzle_list_empty">Puzzle list empty</string>

    <string name="enter_new_password">Enter new password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="my_profile">My Profile</string>
    <string name="show_map">Show map</string>
    <string name="welcome_to_geopuzzle">Welcome to GeoPuzzle</string>
    <string name="enter_credentials">Enter your credentials to login</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset password</string>
    <string name="register_here">Register here</string>
    <string name="dont_have_account">You dont have account?</string>
    <string name="search_for_friends">Search For Friends</string>
    <string name="logout">Logout</string>
    <string name="fill_form">Please fill form to register</string>
    <string name="fill_puzzle">Please fill form to create puzzle</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_lastname">Enter lastname</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="tap_to_capture_image">Tap to capture image</string>
    <string name="register">Register</string>
    <string name="enter_firstname">Enter firstname</string>
    <string name="registration_details">Your Registration Details</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registred_at">Registred at</string>
    <string name="go_to_login">Go to Login</string>

    <string name="puzzle_name_new">Puzzle name</string>
    <string name="enter_puzzle_name">Enter puzzle name</string>
    <string name="puzzle_pattern">Choose puzzle pattern</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="geopuzzle_service">GeoPuzzle service</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="search">Search</string>
    <string name="google_app_id">1:574898370431:android:b4eede9f7ec95dd9</string>
    <string name="server_client_id">613497862690-n2m2n77kf33slihr0s0lhbi8plcraugc.apps.googleusercontent.com</string>
    <string name="description">Description</string>
    <string name="service_description">This is GeoPuzzle Service control activity. GeoPuzzle Service is used to update your location on server so your friends can know where you are. If you don\'t want to update your location, you can turn off this service. Once you turn on this service, it stays active even if you close application.</string>
    <string name="search_friends">Search My Friends</string>
    <string name="search_puzzles">Search My Puzzles</string>
    <string name="search_by_distance">Search by Distance</string>
    <string name="enter_search_criterium">Enter search criterium</string>
    <string name="enter_distance">Enter distance</string>
    <string name="enter_email_or_username">Enter email or username</string>
</resources>
