<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.got.geopuzzle.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fill_form"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView
                    android:text="@string/first_name"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/firstNameEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:hint="@string/enter_firstname"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView
                    android:text="@string/last_name"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/lastNameEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:hint="@string/enter_lastname"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView
                    android:text="@string/email"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText android:id="@+id/emailEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView android:text="@string/username"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText android:id="@+id/usernameEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:inputType="text"
                    android:hint="@string/enter_username"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView android:text="@string/password"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText android:id="@+id/passwordEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView android:text="@string/confirm_password"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText android:id="@+id/confirmPasswordEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <TextView android:text="@string/phone_number"
                    android:layout_height="40dp"
                    android:layout_width="100dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:gravity="center_vertical|right"
                    android:layout_marginRight="5dp"/>

                <EditText android:id="@+id/phoneNumberEdit"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:textSize="15sp"
                    android:inputType="phone"
                    android:hint="@string/enter_phone_number"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <RelativeLayout
                    android:layout_width="210dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center"
                    android:background="#cecece"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tap_to_capture_image"/>

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_marginTop="20dp"

                    android:background="@drawable/buttonshape"
                    android:shadowColor="#1B29A8"
                    android:textColor="#FFFFFF"
                    />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"

                    android:background="@drawable/buttonshape"
                    android:shadowColor="#1B29A8"
                    android:textColor="#FFFFFF"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>