<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rs.elfak.got.geopuzzle.ChangePasswordActivity">

    <TextView
        android:text="@string/enter_new_password"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="25dp">

        <TextView
            android:text="@string/password"
            android:layout_height="40dp"
            android:layout_width="100dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:gravity="center_vertical|right"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/enter_new_password"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="25dp">

        <TextView
            android:text="@string/confirm_password"
            android:layout_height="40dp"
            android:layout_width="100dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:gravity="center_vertical|right"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/confirmPasswordEdit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_change_password"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>