<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="@string/description"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView android:text="@string/service_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:id="@+id/startServiceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/start_service"
                android:layout_marginTop="40dp"

                android:background="@drawable/buttonshape"
                android:shadowColor="#1B29A8"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
