<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePuzzleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/fill_puzzle"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:typeface="normal" />

            <TextView
                android:text="@string/puzzle_name_new"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/firstNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="25sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:inputType="text"
                android:hint="@string/enter_puzzle_name"/>

            <TextView
                android:text="@string/puzzle_pattern"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/pattern21Img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/pattern21"/>

                    <ImageView
                        android:id="@+id/pattern21ChkImg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/pattern21checked"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/pattern22Img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/pattern22"/>

                    <ImageView
                        android:id="@+id/pattern22ChkImg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/pattern22checked"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/pattern33Img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/pattern33"/>

                    <ImageView
                        android:id="@+id/pattern33ChkImg"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/pattern33checked"
                        android:visibility="invisible"/>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:background="#cecece"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Tap to upload puzzle"/>

                <ImageView
                    android:id="@+id/uploadPuzzleImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>
            </RelativeLayout>

            <Button
                android:id="@+id/publishPuzzleBtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="Publish puzzle"
                android:layout_gravity="center"

                android:background="@drawable/buttonshape"
                android:shadowColor="#1B29A8"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
